re PR c/57574 (-std=c99 inline function incorrectly has external linkage with prior static declaration)

PR c/57574
c:
	* c-decl.c (merge_decls): Clear DECL_EXTERNAL for a definition of
	an inline function following a static declaration.

testsuite:
	* gcc.dg/inline-35.c: New test.

From-SVN: r205506